# fastapi-shop-api

./: README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_07_11_1843-dda8b610ce3b_create_tables.py  2024_07_31_0038-7231f09a616b_create_tables.py
app/adapters/routers/: auth.py  users.py  users_crud.py
app/config/: config.py  exceptions.py  logger.py
app/dependencies/: auth.py  auth_dependencies.py  db.py  user.py  user_dependencies.py  utils.py
app/domain/models/: __init__.py  user.py
app/domain/schemas/: pagination_info.py  user.py
app/repositories/: auth_repo.py  base.py  base_auth.py  base_user.py  base_user_crud.py  user_crud_repo.py  user_repo.py
app/use_cases/: auth.py  auth_use_cases.py  user.py  user_crud.py  user_use_cases.py
domen/models/: user.py
